@@ -30,7 +30,7 @@ import java.net.URI;
 public final class TestClientFactory {
 
     public static final int PORT = 45940;
-    public static final URI WEBSOCKET_URI = URI.create("ws://localhost:" + PORT);
+    public static final URI WEBSOCKET_URI = URI.create("ws://localhost:" + PORT + "/gremlin");
     public static final URI NIO_URI = URI.create("gs://localhost:" + PORT);
     public static final String HTTP = "http://localhost:" + PORT;
 
